--- a/npm/package.json
+++ b/npm/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.3",
     "@types/mocha": "^8.2.1",
+    "fs-extra": "^9.1.0",
     "mocha": "^8.3.1"
   }
 }
